fixing spacing on marty the whale
added font family css

--- a/css/index.css
+++ b/css/index.css
@@ -22,8 +22,7 @@ body{
 	margin-left: 35%;
 	margin-right: 35%;
 	background-color: #028482;
-	font-family: sans-serif;
-	font-weight: 100;
+	font-family: 'Raleway', sans-serif;
 }
 
 .red{
@@ -32,16 +31,22 @@ body{
 
 h1{
 	color: #fff;
+	font-weight: 800;
+	letter-spacing: 10px;
+	text-align: center;
 }
 
 p{
-	width: 95%;
+	font-weight: 400;
 	color: #fff;
+	letter-spacing: 4.5px;
+	text-align: center;
 }
 
 .whale{
 	color: #000;
 	font-size: 10em;
+	margin: 13%;
 }
 
 /* shake animation from http://elrumordelaluz.github.io/csshake/ */
